# systema2

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: release.yml  tests.yml
scripts/: validate_commit_msg.py
systema2/: app.py  cli.py  config.py  database.py  models.py  nanoid.py  repository.py  services.py  tui.py  whiteboard_services.py
systema2/api/: __init__.py  app.py  auth.py
systema2/api/routes/: projects.py  tasks.py
systema2/cli/: __init__.py  __main__.py  _render.py  auth.py  projects.py  serve.py  tasks.py  tui.py
systema2/tui/: __init__.py  app.py
systema2/tui/screens/: calendar.py  delete.py  form.py  module_picker.py  project_form.py  rename_box.py  whiteboard.py  whiteboard_list.py
tests/: conftest.py  test_auth.py  test_calendar.py  test_cli.py  test_config.py  test_due_date.py  test_e2e.py  test_endpoints.py  test_gen_api_key.py  test_priority.py  test_projects_api.py  test_projects_cli.py  test_projects_tui.py  test_repository.py  test_style_toolbar.py  test_tui.py  test_tui_module_picker.py  test_tui_theme.py  test_tui_vim_keys.py  test_tui_whiteboards.py  test_whiteboard_click.py  test_whiteboard_render.py  test_whiteboards.py
