[project]
name = "systema2"
version = "0.5.0"
description = "A small task manager with a FastAPI backend, Typer CLI, and Textual TUI. Runs in local, client, or server mode."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Rodrigo Eiti Kimura" },
]
keywords = ["tasks", "todo", "fastapi", "textual", "cli", "tui"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "pydantic-settings",
    "sqlmodel>=0.0.38",
    "textual>=8.2.4",
    "typer>=0.24.2",
    "uvicorn>=0.46.0",
]

[project.urls]
Homepage = "https://github.com/rodrigokimura/systema2"
Repository = "https://github.com/rodrigokimura/systema2"
Issues = "https://github.com/rodrigokimura/systema2/issues"

[project.scripts]
systema2 = "systema2.cli:main"
systema2-tui = "systema2.tui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["systema2"]

[dependency-groups]
dev = [
    "commitizen>=4.13.10",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end tests that spawn real subprocesses (slow)",
]
